Thu Mar  3 05:05:20 UTC 2011  William R. Otte  <r._w@local>

        * tools/Config_Handlers/Any_Handler.cpp:

          Catch CORBA exceptions to give better error message.

Thu Mar  3 05:04:29 UTC 2011  William R. Otte  <r._w@local>

        * docs/LocalityManager-Plugins.txt:

          Updated to reflect --best-effort change.

Thu Mar  3 03:44:35 UTC 2011  William R. Otte  <r._w@local>

        * bin/nodemanager.localityconfig:
        * dance/NodeManager/NodeManager_Impl.h:
        * dance/NodeManager/NodeManager_Impl.cpp:
        * dance/NodeManager/Node_Manager_Module.h:
        * dance/NodeManager/Node_Manager_Module.cpp:

          Removed --best-effort and integrated localityconfig based configuration
          to the NodeManager.  Default configuration read from
          DANCE_ROOT/docs/nodemanager.localityconfig, alternates may be
          supplied with the --node-config command line option.

Mon Feb 28 13:22:16 UTC 2011  Vladimir Zykov  <vladimir.zykov@prismtech.com>

        * rules.dance.GNU:
          Fixed spelling of DAnCE versions.

Fri Feb 11 11:16:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Sun Jan 23 19:27:25 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

                * tools/Config_Handlers/DynAny_Handler/DataType_Handler.h:
                * tools/Config_Handlers/DynAny_Handler/DataType_Handler.cpp:
                * tools/Config_Handlers/DynAny_Handler/DynAlias_Handler.cpp:
                * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.h:
                * tools/Config_Handlers/DynAny_Handler/DynAny_Handler.cpp:
                * tools/Config_Handlers/DynAny_Handler/DynEnum_Handler.h:
                * tools/Config_Handlers/DynAny_Handler/DynEnum_Handler.cpp:
                * tools/Config_Handlers/DynAny_Handler/DynSequence_Handler.cpp:
                * tools/Config_Handlers/DynAny_Handler/DynStruct_Handler.h: