@@ -50,7 +50,6 @@ DAnCE_NodeManager_Module::SOptions::SOptions(void)
     server_args_ (0),
     domain_nc_ (0),
     instance_nc_ (0),
-    best_effort_ (false),
     locality_config_("")
 {
   ACE_Env_Value<const ACE_TCHAR *> dance_env (ACE_TEXT ("DANCE_ROOT"),
@@ -91,7 +90,6 @@ DAnCE_NodeManager_Module::usage (void)
     "\t-t|--timeout\t\t default timeout in seconds to wait for component server spawn\n"
     "\t-d|--domain-nc [NC]\t Default naming context for domain objects.\n"
     "\t--instance-nc [NC]\t Default naming context for instance registration directives. No argument indicates Domain NC.\n"
-    "\t--best-effort\t\t Instruct the node manager and the default behavior for locality managers to be best effort.\n"
     "\t--locality-config\t\t Provide a locality configuration file that is passed to all spawned locality managers.\n"
     "\t--node-config\t\t Provide a locality configuration file used to initialize the NodeManager.\n"
     "\t-h|help\t\t\t print this help message\n";
@@ -118,7 +116,6 @@ DAnCE_NodeManager_Module::parse_args (int argc, ACE_TCHAR * argv[])
   get_opts.long_option (ACE_TEXT("timeout"), 't', ACE_Get_Opt::ARG_REQUIRED);
   get_opts.long_option (ACE_TEXT("domain-nc"), 'd', ACE_Get_Opt::ARG_REQUIRED);
   get_opts.long_option (ACE_TEXT("locality-config"), ACE_Get_Opt::ARG_REQUIRED);
-  get_opts.long_option (ACE_TEXT("best-effort"), ACE_Get_Opt::NO_ARG);
   get_opts.long_option (ACE_TEXT("help"), 'h', ACE_Get_Opt::NO_ARG);
   get_opts.long_option (ACE_TEXT("instance-nc"), ACE_Get_Opt::ARG_REQUIRED);
   get_opts.long_option (ACE_TEXT("node-config"), ACE_Get_Opt::ARG_REQUIRED);
@@ -211,13 +208,6 @@ DAnCE_NodeManager_Module::parse_args (int argc, ACE_TCHAR * argv[])
                                ACE_TEXT("Using locality configuration file for node: <%s>\n"),
                                get_opts.opt_arg ()));
               this->options_.node_config_ = ACE_TEXT_ALWAYS_CHAR (get_opts.opt_arg ());
-            }
-          else if (ACE_OS::strcmp (get_opts.long_option (),
-                                   ACE_TEXT("best-effort")) == 0)
-            {
-              DANCE_DEBUG (6, (LM_DEBUG, DLINFO ACE_TEXT("Node_Manager_Module::parse_args - ")
-                               ACE_TEXT("Using best effort deploment semantics\n")));
-              this->options_.best_effort_ = true;
             }
           else if (ACE_OS::strcmp (get_opts.long_option (),
                                    ACE_TEXT("instance-nc")) == 0)
@@ -639,12 +629,6 @@ DAnCE_NodeManager_Module::create_nm_properties (DAnCE::Utility::PROPERTY_MAP &pr
       CORBA::Any val;
       val <<= CORBA::Any::from_string (CORBA::string_dup (ACE_TEXT_ALWAYS_CHAR (this->options_.domain_nc_)), 0);
       props.bind (DAnCE::DOMAIN_NC, val);
-    }
-  if (this->options_.best_effort_)
-    {
-      CORBA::Any val;
-      val <<= CORBA::Any::from_boolean (true);
-      props.bind (DAnCE::LOCALITY_BESTEFFORT, val);
     }
 }
 
